--- a/src/scsses/index.scss
+++ b/src/scsses/index.scss
@@ -1,5 +1,6 @@
 @import './normalize.scss';
 @import './mixin.scss';
-@import './sprite.scss';
+@import './sprite_png.scss';
+@import './sprite_svg.scss';
 @import './common.scss';
 @import './layout.scss';
