--- a/src/scsses/normalize.scss
+++ b/src/scsses/normalize.scss
@@ -32,8 +32,11 @@ input,
 select,
 table,
 textarea {
-  font-size: 12px;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+html {
+  font-size: 10px;
 }
 
 ol,
